<resources>
    <string name="app_name">IYY</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="title">잉여야</string>
    <string name="setting_button">Setting</string>
    <string name="statistics_button">Statistics</string>
    <string name="back_button">Back</string>
    <string name="run_button">Run</string>
    <string name="facebook_text">Facebook</string>
    <string name="twitter_text">Twitter</string>
    <string name="alarm_interval">Alarm interval</string>
    <string name="alarm_type">Alarm type</string>
    <string name="alarm_tone">Alarm tone</string>
    <string name="type_of_sns">Type of SNS</string>
    <string name="period">Period</string>
    <string name="check_value">Check value</string>
    <string name="period_from">From</string>
    <string name="period_to">To</string>
    <string name="title_activity_chart">ChartActivity</string>
    <string name="get_twitter_data_button">Get Twitter Data</string>
    <string name="get_facebook_data_button">Get Facebook Data</string>
    <string name="facebook_app_id">962021183914314</string>
    <string name="title_activity_twit_login">TwitLogin</string>
</resources>
