<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cs350.iyy.StatisticsActivity"
    tools:showIn="@layout/activity_statistics">

    <TextView
        android:id="@+id/statistics_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics_button"
        android:textSize="30dp"
        android:textColor="#FFFFFF"
        />

    <!-- Choose application-->
    <TextView
        android:id="@+id/type_of_sns_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/statistics_title"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:textColor="#FFFFFF"

        android:text="@string/type_of_sns" />
    <ToggleButton
        android:id="@+id/type_of_sns"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/statistics_title"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:text="@string/run_button"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:background="@drawable/starto"
        android:textOn="Facebook"
        android:textOff="Twitter" />

    <!-- Choose period-->
    <TextView
        android:id="@+id/period_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/type_of_sns_text"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:text="@string/period" />
    <Button
        android:id="@+id/period_from"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@id/period_text"
        android:layout_marginTop="30dp"
        android:onClick="onFromButtonClicked"
        android:background="@drawable/fromf" />
    <Button
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@id/period_text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:onClick="onToButtonClicked"
        android:background="@drawable/tof"/>


    <!-- Choose type of value to be checked-->
    <TextView
        android:id="@+id/check_value_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/period_from"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="30dp"
        android:text="@string/check_value" />
    <ToggleButton
        android:id="@+id/check_value"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/period_from"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:text="@string/run_button"
        android:textColor="#FFFFFF"
        android:background="@drawable/starto"

        android:textOn="Open count"
        android:textOff="Number of postings" />

    <Button
        android:id="@+id/draw_chart"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@id/check_value_text"
        android:layout_marginTop="30dp"
        android:onClick="onRunButtonClicked"
        android:background="@drawable/gof" />

    <Button
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@id/draw_chart"
        android:layout_marginTop="30dp"
        android:onClick="onBackButtonClicked"
        android:background="@drawable/backf"/>
</RelativeLayout>
