<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cs350.iyy.SettingActivity"
    tools:showIn="@layout/activity_setting">

    <TextView
        android:id="@+id/setting_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35dp"
        android:textColor="#FFFFFF"
        android:typeface = "sans"
        android:text="@string/setting_button" />

    <!-- Enable/Disable Collecting Facebook data-->
    <TextView
        android:id="@+id/facebook_collect_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_title"
        android:layout_marginTop="20dp"
        android:textSize="25dp"
        android:textColor="#FFFFFF"
        android:typeface = "sans"
        android:text="@string/facebook_text" />
    <Switch
        android:id="@+id/facebook_collect_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_title"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:textOff="Off"
        android:textOn="On"
        android:checked="false" />

    <!-- Enable/Disable Collecting Twitter data-->
    <TextView
        android:id="@+id/twitter_collect_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/facebook_collect_text"
        android:layout_marginTop="15dp"
        android:textSize="25dp"
        android:textColor="#FFFFFF"
        android:typeface = "sans"
        android:text="@string/twitter_text" />
    <Switch
        android:id="@+id/twitter_collect_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/facebook_collect_text"
        android:layout_marginTop="10dp"
        android:layout_alignParentEnd="true"
        android:textOff="Off"
        android:textOn="On"
        android:checked="false" />

    <!-- Select alarm interval-->
    <TextView
        android:id="@+id/alarm_interval_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/twitter_collect_text"
        android:layout_marginTop="15dp"
        android:textSize="25dp"
        android:textColor="#FFFFFF"
        android:typeface = "sans"

        android:text="@string/alarm_interval" />
    <Spinner
        android:id="@+id/alarm_interval_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/twitter_collect_text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        android:textColor="#FFFFFF"

        android:entries="@array/alarm_interval" />

    <!-- Select alarm type-->
    <TextView
        android:id="@+id/alarm_type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/alarm_interval_text"
        android:layout_marginTop="10dp"
        android:textSize="25dp"
        android:textColor="#FFFFFF"
        android:typeface = "sans"

        android:text="@string/alarm_type" />
    <Spinner
        android:id="@+id/alarm_type_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/alarm_interval_text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:entries="@array/alarm_type" />

    <!-- Select alarm tone-->
    <TextView
        android:id="@+id/alarm_tone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/alarm_type_text"
        android:layout_marginTop="15dp"
        android:textSize="25dp"
        android:textColor="#FFFFFF"
        android:typeface = "sans"
        android:text="@string/alarm_tone" />
    <Spinner
        android:id="@+id/alarm_tone_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/alarm_type_text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:entries="@array/alarm_tone" />

    <!-- Move to main activity-->
    <Button
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@id/alarm_tone_text"
        android:layout_marginTop="35dp"
        android:onClick="onBackButtonClicked"
        android:background="@drawable/backf" />
</RelativeLayout>
